# ascii-player

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  document.md  flake.nix  justfile
.github/workflows/: ci.yml
src/: cli.rs  converter.rs  decoder.rs  lib.rs  main.rs  prelude.rs  renderer.rs
tests/: integration_tests.rs
